--- a/FoodDelivery.API/appsettings.json
+++ b/FoodDelivery.API/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=FoodDeliveryDb;Username=postgres;Password=password;"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000",
+    "Secret": "JWTSecretKey_VeryLongAndSecure_ForFoodDeliveryAPI",
+    "ExpirationInMinutes": 15,
+    "RefreshTokenExpirationInDays": 7,
+    "RefreshTokenTTL": 7
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
